fixed death date animation on small screens

--- a/gatsby-site/src/pages/style.scss
+++ b/gatsby-site/src/pages/style.scss
@@ -61,12 +61,9 @@ img {
 
         h3 {
             width: 100%;
-            //margin-left: 15px;
-            padding-left: 25px;
+            padding-left: 23px;
             font-size: 22px;
             color: $light-gray;
-            //left: 50%;
-            //transform: translate(-50%, 0);
 
             span.infinity-symbol {
                 font-family: Georgia, serif;
@@ -367,7 +364,7 @@ img {
             }
     
             h3 {
-                margin-left: 0;
+                padding-left: 0;
             }
         }
 
